# vektor

./: .gitignore  Dockerfile  LICENSE  README.md  TODO_YOU_BUILD.md  docker-compose.yml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: ci.yml  lint.yml
data/: sample.jsonl
docs/: architecture.md  benchmarks.md  hnsw-notes.md
infra/: prometheus.yml
scripts/: benchmark.py  build_index.py  download_wikipedia.py  entrypoint.sh  loadtest.py  synth_clicks.py
tests/: conftest.py  test_api_smoke.py  test_bm25.py  test_chunker.py  test_eval_metrics.py  test_feedback.py  test_flat_index.py  test_hnsw.py  test_hybrid.py  test_query.py
vektor/: __init__.py  cli.py  config.py
vektor/api/: cache.py  main.py  metrics.py  state.py
vektor/api/routes/: feedback.py  ingest.py  search.py
vektor/eval/: __init__.py  metrics.py
vektor/index/: __init__.py  base.py  bm25.py  flat.py  hnsw.py  ivf.py
vektor/ingestion/: __init__.py  chunker.py  embedder.py
vektor/ingestion/loaders/: __init__.py  html.py  jsonl.py  pdf.py
vektor/rerank/: __init__.py  cross_encoder.py  feedback.py  train.py
vektor/retrieval/: __init__.py  hybrid.py  query.py
