[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vektor"
version = "0.1.0"
description = "Semantic search infrastructure: HNSW + hybrid retrieval + self-improving reranker"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Kriti Raj", email = "kriti.112735@gmail.com" }]
keywords = ["semantic-search", "hnsw", "vector-search", "rag", "information-retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "transformers>=4.40",
    "rank-bm25>=0.2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "redis>=5.0",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "click>=8.1",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
    "ipykernel>=6.29",
    "locust>=2.24",
]

[project.scripts]
vektor = "vektor.cli:main"

[tool.setuptools.packages.find]
include = ["vektor*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
